# organised

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
organised/: __init__.py  camera_organiser.py  git_organiser.py  junkfile_organiser.py  organised.py
organised/default_config/: config.yaml  logger.yaml
organized/: __init__.py  cli.py  organize.py  organized.py
organized/default_config/: config.yaml  logger.yaml
organized/helpers/: __init__.py  base_organizer.py  camera_organizer.py  git_organizer.py  junkfile_organizer.py
organized/logic/: action.py
organized/storage/: __init__.py  amazon_s3_storage.py  base_file.py  base_storage.py
