[metadata]
name = organised
author = Luke Plausin
author-email = luke.plausin@gmail.com
summary = Python utility for managing files
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/lukeplausin/organised
project_urls =
    Bug Tracker = https://github.com/lukeplausin/organised
    Documentation = https://github.com/lukeplausin/organised
    Source Code = https://github.com/lukeplausin/organised
license = MIT
classifier =
    Programming Language :: Python :: 3
    Natural Language :: English
    Intended Audience :: Developers
keywords =
    utilities
    python
    amazon
    exif
    images
    library
    cloud

[files]
packages =
    organised

# Get config and logger config files in here?
# data_files =
#     ~/.organised/ =
#         default_config/config.yaml
#         default_config/logger.yaml

[entry_points]
console_scripts =
    organised = organised.organised:cli
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
